# AndroidPanzer

./: .gitignore  3D_WIFI_SCANNER_COMPLETE.md  3D_WIFI_SCANNER_TECHNICAL.md  AI_DOCTOR_SYSTEM.md  ANOMALY_DETECTOR_REPORT.md  APP_DECRYPTION_ENGINE.md  BRUTE_FORCE_ARSENAL.md  BUG_SCAN_REPORT.md  CHANGELOG.md  COMPLETE_AI_INTEGRATION.md  COMPLETE_SYSTEM_FINAL.md  COMPREHENSIVE_ERROR_AUDIT.md  DASHBOARD_DEMO.txt  DASHBOARD_SYSTEM.md  DATABASE_SCANNER.md  FINAL_PUSH_GUIDE.md  FINAL_SUMMARY.md  INTELLIGENT_ENGINE.md  KEYWORD_RECORDER_SYSTEM.md  KI_SYSTEM_FINAL.md  LICENSE  MENU_STRUCTURE.json  MICROPHONE_TAP_BUGFIX.md  PUSH_INSTRUCTIONS.md  QUICK_START_GUIDE.md  README.md  SCENT_SENSOR_EXPLANATION.md  SECURITY.md  SURVEILLANCE_TOOLS.md  SYSTEM_VALIDATION_REPORT.md  TESTING_REPORT.md  WIFI_3D_SCANNER_AUDIT.md  panzer.py  pyproject.toml  requirements-optional.txt  start.sh
.github/: CONTRIBUTING.md  pull_request_template.md
apz/: __init__.py  account_scanner.py  acquire.py  adb.py  adb_shell.py  adult_activity_detector.py  adult_content_scanner.py  advanced_security_suite.py  ai_automation.py  ai_core.py  ai_doctor.py  ai_integration.py  ai_optimizer.py  ai_recipes.py  ai_report_generator.py  aishell.py  anomaly_detector.py  apkscan.py  app_decryption.py  app_traffic_monitor.py  appscan.py  audio_playback.py  auto_root_engine.py  av_capture.py  bootloader_locker.py  bootloop.py  brands.py  brute_force.py  builtin_tools.py  camera_tap.py  casedb.py  category_display.py  comprehensive_sexual_keywords.py  crime_keywords_profile.py  customfw.py  dashboard.py  dashboard_feature.py  (+74 more)
(+40 files in other folders)
